# FreenectGreenScreen

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: CmdLineOpts.cpp  CmdLineOpts.hpp  MyFreenectDevice.cpp  MyFreenectDevice.hpp  main.cpp  utils.cpp  utils.hpp
